# FOAM

./: .gdb_history  .gitignore  AUTHORS  BRANCHES  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.developer  THANKS  TODO  ao_config.cfg  ao_library.c  ao_library.h  ao_modular-project.tmproj  architecture  common.mk  configure.ac  cs_config.h  cs_library.c  cs_library.h  dot-aperture.fits  fitsfile.c  fitsfile.h  foam_config.h  foam_cs.c  foam_cs_library.c  foam_cs_library.h  foam_library.h  foam_modules-dm.c  foam_modules-sh.c  foam_modules-sh.h  foam_modules-sim.c  foam_modules-sim.h  foam_modules.h  foam_ui.c  foam_ui_library.c  (+11 more)
cfitsio/lib/pkgconfig/: cfitsio.pc
conf/: Makefile.am  ao_config-dm.cfg  dalsa-cad6_0256-pcd.cam.saturn  dalsa-cad6_0256-pcd.cam.tim  dalsa-cad6_0256-pcd.cam.venus  foam-dummy.cfg  foam-expoao.cfg  foam-exposim.cfg  foam-fullsim.cfg  foam-hwtest.cfg  foam-simstat.cfg  foam-simstat2.cfg
conf/fullsim/: simulwfc.csv
conf/simstat/: foam-dummycam.cfg  foam-imgcam.cfg  foam-shwfs.cfg
config/: Makefile  Makefile.am  ao_config.cfg  aperture.fits  dalsa-cad6-pcd.cam  foam.fits  simstatic-dark.pgm  simstaticrect.pgm
data/: Makefile.am  apert15-256.pgm  sim_actmap.fits  simstatic-flat.pgm  simstatic-regular.pgm  simulwfc.csv
data/alpao/: alpaoHSDM97-15-031  alpaoHSDM97-15-031.acfg  alpaodm97_zernmat_sub.fits
dm37/: apert15-256.pgm  apert15.pgm  dm37-256.pgm  dm37.pgm  response2.c  response2.c.tim  vol37.txt  volsim.txt
docs/: Makefile.am  doxyfile  doxyfile-debug  doxyfile-debug.base  foam.bib  protocol.txt
docs/img/: atm_seeing_ao-system-full.eps
foam/: Makefile.am  foam-dummy.c  foam-dummy.cc  foam-dummy.h  foam-expoao.cc  foam-expoao.h  foam-fullsim.cc  foam-fullsim.h  foam-hwtest.cc  foam-hwtest.h  foam-simstatic.cc  foam-simstatic.h  foam.c  foam.cc  foam.h  foam_primemod-dummy.h  foam_primemod-mcmath.c  foam_primemod-mcmath.h  foam_primemod-simdyn.c  foam_primemod-simdyn.h  foam_primemod-simstatic.c  foam_primemod-simstatic.h  foamcfg.cc  foamcfg.h  foamctrl.cc  foamctrl.h
foam-conf/: ao_config-tt.cfg  dalsa-cad6-pcd.cam  dalsa-cad6_0256-pcd.cam  dalsa-cad6_0256-pcd.cam.new  dalsa-cad6_0256-pcd.cam.sun  simstatic-irr.pgm
lib/: Makefile.am  config.h  devices.cc  devices.h  dispcommon.h  dispgl.c  dispgl.cc  dispsdl.c  dispsdl.cc  foam_cs_library.c  foam_cs_library.h  foamtypes.h  format.h  img.c  img.cc  img.h  imgio.cc  imgio.h  io.cc  io.h  libfoam.c  libfoam.h  log.c  log.cc  log.h  protocol.cc  protocol.h  pthread++.h  shift.cc  shift.h  simseeing.cc  simseeing.h  simwfs.cc  simwfs.h  socket.cc  socket.h  types.h  zernike.cc  zernike.h
m4/: ax_check_gl.m4
mods/: 1394cam.cc  alpaodm.cc  alpaodm.h  andor.cc  andor.h  calib.c  calib.cc  calib.h  cam.cc  cam.h  camera.cc  camera.h  daq2k.c  daq2k.cc  daq2k.h  dc1394++.h  dummy.cc  dummycam.cc  dummycam.h  foam_modules-daq2k.h  foam_modules-serial.c  fw1394cam.cc  fw1394cam.h  imgcam.cc  imgcam.h  itifg.c  itifg.cc  itifg.h  okodm.c  okodm.cc  okodm.h  serial.c  serial.cc  serial.h  sh.c  sh.cc  sh.h  shtrack.cc  shtrack.h  shwfs.cc  (+16 more)
old/: fitsfile.c
qfits/lib/: libqfits.0.0.0.dylib  libqfits.dylib
scripts/: inspect_calib_files.py
src/: Makefile.am  foam_cs.c  foam_cs_config.h  foam_cs_library.c  foam_cs_library.h  foam_library.c  foam_library.h  foam_modules-calib.c  foam_modules-calib.h  foam_modules-daq2k.c  foam_modules-daq2k.h  foam_modules-dispcommon.h  foam_modules-dispgl.c  foam_modules-dispgl.h  foam_modules-display.c  foam_modules-display.h  foam_modules-dispsdl.c  foam_modules-dispsdl.h  foam_modules-dm.c  foam_modules-dm.h  foam_modules-dummy.c  foam_modules-img.c  foam_modules-img.h  foam_modules-itifg.c  foam_modules-itifg.h  foam_modules-log.c  foam_modules-log.h  foam_modules-okodm.c  foam_modules-okodm.h  foam_modules-pgm.c  foam_modules-pgm.h  foam_modules-serial.c  foam_modules-serial.h  foam_modules-sh.c  foam_modules-sh.h  foam_modules-sim.c  foam_modules-sim.h  foam_primemod-dummy.c  foam_primemod-dummy.h  foam_primemod-mcmath.c  (+13 more)
testing/: Makefile.am  README  alpaodm-test.cc  alpaodm-test.cfg  andorcam-test.cc  autotools-test.cc  bitness-test.cc  camsend-test.cc  camview-test.cc  dalsa-cad6-pcd-tim.cam  dalsa-cad6-pcd.cam  dc1394-test.cc  foam_modules-alone.h  gtk-test.cc  imgio-convert-test.cc  imgio-test.cc  io-test.cc  latencies-test.cc  opengl-test.cc  pixbuf-test.cc  protocol-test.cc  shwfs-test.cc  shwfs-test.cfg  sigcpp-test.cc  wht-test.cc  wht-test.cfg  zern-test.cc
testing_devs/: Makefile.am
ui/: Makefile.am  about.cc  about.h  camctrl.cc  camctrl.h  camview.cc  camview.h  controlview.cc  controlview.h  devicectrl.cc  devicectrl.h  deviceview.cc  deviceview.h  fgui.cc  fgui.h  foam_ui_library.c  foam_ui_library.h  foamcontrol.cc  foamcontrol.h  log.cc  log.h  logview.cc  logview.h  shwfsctrl.cc  shwfsctrl.h  shwfsview.cc  shwfsview.h  simcamctrl.cc  simcamctrl.h  simcamview.cc  simcamview.h  telescopectrl.cc  telescopectrl.h  telescopeview.cc  telescopeview.h  ui.c  wfcctrl.cc  wfcctrl.h  wfcview.cc  wfcview.h  (+6 more)
