SUBDIRS = src conf testing
EXTRA_DIST = AUTHORS BUGS COPYING Changelog INSTALL README THANKS TODO
#EXTRA_DIST += config/ao_config-dm.cfg config/ao_config-tt.cfg config/ao_config.cfg config/ao_config-simstat.cfg
#EXTRA_DIST += config/apert15-256.png config/dm37-256.png config/wavefront.png config/simstatic.png
